Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h3>
 <a id="welcome-to-simplexrmjs" class="anchor" href="#welcome-to-simplexrmjs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to simpleXrm.js</h3>
 
-<p>simpleXrm.js is a JavaScript library that provides a layer of abstraction between client side code (such as Dynamics CRM form scripts and SPAs) and the Microsoft Dynamics CRM JavaScript API. For more information <a href="https://https://github.com/joenewstrom/simpleXrm/">browse the source</a>.</p>
+<p>simpleXrm.js is a JavaScript library that provides a layer of abstraction between client side code (such as Dynamics CRM form scripts and SPAs) and the Microsoft Dynamics CRM JavaScript API. For more information <a href="https://github.com/joenewstrom/simpleXrm/">browse the source</a>.</p>
 
 <h3>
 <a id="author-and-principal-developer" class="anchor" href="#author-and-principal-developer" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Author and Principal Developer</h3>
