--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>simpleXrm by joenewstrom</title>
+    <img src="images/simplelife.png"></img><title>simpleXrm by joenewstrom</title>
   </head>
 
   <body>
