--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <img src="images/simplelife.png"></img><title>simpleXrm by joenewstrom</title>
+    <title>simpleXrm by joenewstrom</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>simpleXrm</h1>
+        <h1><img src="images/simplelife.png"></img>simpleXrm</h1>
         <h2>Save time writing client side code for Dynamics CRM. Write interactive forms for Dynamics CRM using the javascript API. Less time on syntax, more time on business logic.</h2>
         <a href="https://github.com/joenewstrom/simpleXrm" class="button"><small>View project on</small> GitHub</a>
       </div>
