--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1><img src="images/simplexrm.png"></img></h1>
-        <h2>Save time writing client side code for Dynamics CRM. Write interactive forms for Dynamics CRM using the javascript API. Less time on syntax, more time on business logic.</h2>
+        <h2>Save time writing client side code for Dynamics CRM. Write interactive forms for Dynamics CRM using the javascript API. Less time on syntax, more time on business logic™.</h2>
         <a href="https://github.com/joenewstrom/simpleXrm" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
